Character Entry is finished

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
     <body>
-        <p id="formatIndicator">Name | Dex Mod | Other Initiative Mods</p>
-        <div id="characterEntry">
-        </div>
+        <p id="formatIndicator">Character Entry<br>Name | Dex Mod | Other Initiative Mods (input sum excluding dex)</p>
+        <div id="characterEntry"></div>
         <script src="script.js"></script>
     </body>
 </html>
