You can now import/export party members via JSON files.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <div id="resultDiv">
             <p>Current Initiative: </p>
         </div>
+        <hr>
+        <button id="download">Export party as JSON</button>
+        <button id="upload">Import party JSON</button>
         <script src="script.js"></script>
     </body>
 </html>
